additional search options

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -118,3 +118,8 @@ color: white!important;
     :-ms-input-placeholder {
        color: $grey;
     }
+
+#sponsored {
+  h2 { font-size: 1.75rem; }
+  h3 { font-size: 1.5rem; }
+}    
