content padding-right now 1rem

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -8587,7 +8587,7 @@ ol {
     border-bottom-style: solid; }
 
 .content {
-  padding-right: 50px; }
+  padding-right: 1rem; }
 
 #page {
   margin-top: 87px; }
