--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -520,9 +520,29 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 
 //Bulletins ------------------------------------
 
+.bulletin-archive {
+  h1.page-title {
+    font-size: 2.25rem;
+  }
+}
+
 .bulletin {
-  margin-left: 10px;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
   h1 { 
     font-family: $font-subhead;
     font-size: 1.25rem;}
+}
+
+.bulletinboard {
+  h2 {
+    font-size: 1.75rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
+  a.button {
+    border-bottom: inherit;
+    border-bottom-color: inherit;
+  }
 }
