corrected heading font-sizes for post archives

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -892,7 +892,7 @@ body.purple {
   h1 { font-size: 2.25rem; }
 }
 
-.news, .archive {
+.news, .post-archive {
 h1 {font-size: 1.5rem;}
 h2 {font-size: 1.2rem; }
 
