--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -524,6 +524,9 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   h1.page-title {
     font-size: 2.25rem;
   }
+  h2 {
+    font-size: 1.2rem;
+  }
 }
 
 .bulletin {
