remove "news" as exhibits ancestor page/active state in nav

--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -418,9 +418,10 @@ a.field {
 
 div.field {
   min-height: 355px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   max-width: 305px;
   min-width: 240px;
+  border: .1875em solid $black;
 }
 
 #interdisciplinary {
