--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -10764,9 +10764,10 @@ a.field {
 
 div.field {
   min-height: 355px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   max-width: 305px;
-  min-width: 240px; }
+  min-width: 240px;
+  border: 0.1875em solid #2C2C33; }
 
 #interdisciplinary {
   background: #333366; }
