--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -573,3 +573,23 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
       }
     }
 }
+
+//KSAS Books ------------------------------------
+.widget.ksas_books {
+  h4, p {
+    line-height: 1.4;
+  }
+    article { 
+      h5 {
+      padding-left: 0px !important;
+      a {
+        border-bottom: .125em dotted;
+        border-bottom-color: rgba(0,0,0,0.1);
+        &:hover {
+          color: $black;
+          border-bottom-style: solid;
+        }
+      }
+      }
+    }
+}
