--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -122,4 +122,8 @@ color: white!important;
 #sponsored {
   h2 { font-size: 1.75rem; }
   h3 { font-size: 1.5rem; }
-}    
+} 
+
+.archive-link h4 {
+  font-size: 1.125rem;
+}
