--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -636,11 +636,12 @@ a.off-canvas-submenu-call {
   position: absolute;
   padding: 1em 1em 2.5em;
   display: none;
-  h1, li {
+  h3, li {
     color: #2c2c33 !important;
   }
-  h1 {
+  h3 {
     font-size: .96rem;
+    font-family: $font-header;
   }
 }
 
