--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -927,3 +927,14 @@ h6 {font-size: 1rem; }
     overflow: hidden;
 }
 
+.sticky {
+  background: $grey;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.sticky-title {
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    color: $black !important;
+}
