--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,9 +4,10 @@ $green: #007a53;      //green
 $purple: #24135f;     //purple
 $red: #8a2a2b;        //red
 $yellow: #cba052;     //yellow
-$rust: #6f2c3f;		    //rust
-$black: #2C2C33;     //black
-$grey: #e5e2e0;      //grey
+$rust: #6f2c3f;		  //rust
+$black: #2C2C33;      //black
+$grey: #e5e2e0;       //grey
+$darkgrey: #4A484C;   //dark grey
 $flagship_icon: flagship-icon; //flagship icon
 $fa-font-path: "../fonts";
 
