--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -557,7 +557,7 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 //KSAS Books & Spotlight Profiles & Bulletins ------------------------------------
-.widget.ksas_books, .widget.ksas_profile, .widget.ksas_bulletin  {
+.widget.ksas_books, .widget.ksas_profile, .widget.ksas_bulletin, .widget.ksas_testimonial  {
   h4, p {
     line-height: 1.4;
   }
