recent posts css

--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -108,6 +108,7 @@ img.featured {
 .widget_recent_entries {
   ul {
     font-size: inherit;
+    padding-left: 15px;
       li {
       padding-bottom: 5px;
       }
