--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -19,6 +19,22 @@
 }
 
 #sidebar {
+  ul.nav {
+  list-style: none;
+    li {
+      border-top: 1px solid #999;
+      font-size: 1rem;
+      padding: 10px 0 8px 20px;
+      [class^="icon-"]:before, [class*="icon-"]:before {
+        margin-right: 10px;
+        color: #999;
+        vertical-align: middle;
+      }
+    }
+    &:last-child {
+      border-bottom: 1px solid #999;
+    }
+  }
   h5 {
     padding-left: 20px;
     margin-top: 0;
@@ -47,6 +63,7 @@
   }
   .ecpt-page-sidebar {
     ul li {
+      font-size: 1rem;
       a {
         border-bottom: .125em dotted;
         border-bottom-color: rgba(0, 0, 0, 0.2);
@@ -87,6 +104,9 @@ img.featured {
 }
 
 .textwidget {
+  ul li {
+    font-size: 1rem;
+  }
   h6 {
     margin-top: 0;
     text-transform: none;
