--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -272,6 +272,17 @@ ol {
   background-clip: padding-box;
 }
 
+@mixin linearGradient($top, $bottom){
+    background: $top; 
+    background: linear-gradient(to bottom,  $top 0%,$bottom 100%) !important; /* W3C */
+    /* Old browsers */
+    /* background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
+    /* background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); Chrome10+,Safari5.1+ */
+    /* background: -o-linear-gradient(top,  $top 0%,$bottom 100%); Opera 11.10+ */
+    /* background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); IE10+ */
+    /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); IE6-9 */
+}
 
 .radius10 {
   //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
