--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -539,7 +539,7 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 //KSAS Books & Spotlight Profiles & Bulletins ------------------------------------
-.widget.ksas_books, .widget.ksas_profile, .widget.ksas_bulletin, .widget.ksas_testimonial  {
+.widget.ksas_books, .widget.ksas_profile, .widget.ksas_bulletin, .widget.ksas_testimonial, .widget_job_candidate  {
   h4, p {
     line-height: 1.4;
   }
